force-app/main/default/objects/Product_Pricing__c/Product_Pricing__c.object-meta.xml
<CustomObject>
    <description>Object to store pricing details for a product which can be configured by channel, account store type, account segmentation, etc</description>
    <label>Product Pricing</label>
    <nameField>
        <displayFormat>PPN-{0000}</displayFormat>
        <label>Product Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>