force-app/main/default/objects/Product_Pricing__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <label>Account Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Groups</valueSetName>
    </valueSet>
</CustomField>