force-app/main/default/objects/Product_Pricing__c/fields/GP_per_Bottle__c.field-meta.xml
<CustomField>
    <fullName>GP_per_Bottle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GP per Bottle</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>