force-app/main/default/objects/Product_Pricing__c/fields/GP_per_Case_9L__c.field-meta.xml
<CustomField>
    <fullName>GP_per_Case_9L__c</fullName>
    <formula>ROUND(GP_per_Bottle__c / Product_Unit_Size__c * 9000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP per Case 9L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>