force-app/main/default/objects/Product_Pricing__c/fields/Product_Pack_Qty__c.field-meta.xml
<CustomField>
    <fullName>Product_Pack_Qty__c</fullName>
    <formula>Product__r.Pack_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Pack Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>