force-app/main/default/objects/Product_Pricing__c/fields/Product_Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit_Size__c</fullName>
    <formula>Product__r.Unit_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Unit Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>